objects/API_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Method__c</fullName>
        <label>API Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <defaultValue>&quot;application/json&quot;</defaultValue>
        <label>Content-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Http_Method__c</fullName>
        <label>Http Method</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Http_Request_Timeout__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Http Request Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cache_control__c</fullName>
        <defaultValue>&quot;no-cache&quot;</defaultValue>
        <label>cache-control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>API Setting</label>
    <pluralLabel>API Settings</pluralLabel>
</CustomObject>